[package]
name = "gain-listener"
version = "0.3.1"
authors = ["Timo Savola <timo.savola@iki.fi>"]
edition = "2018"
description = "Client API for gateservice.net/listener service."
documentation = "https://docs.rs/gain-listener"
repository = "https://github.com/gateservice-net/gain-net"
keywords = ["gate", "server", "service", "tls"]
categories = ["api-bindings", "asynchronous", "network-programming"]
license = "MIT"

[dependencies]
flatbuffers = "2.0.0"
gain = "0.4.0"
lazy_static = "1.4.0"

[dev-dependencies]
chrono = "0.4.0"
httparse = "1.3.0"

[[example]]
name = "http"
